<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/footer_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <!--Top Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvAppName"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <!-- Socials Layout -->
        <LinearLayout
            android:id="@+id/layoutSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FacebookIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/facebookDesc"
                android:src="@drawable/icons8_facebook_logo_48" />

            <ImageView
                android:id="@+id/InstagramIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/instagramDesc"
                android:src="@drawable/icons8_instagram_logo_48" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white" />

    <!-- Bottom Row -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ContactUs"
        android:textColor="@color/white"
        android:textSize="12dp" />

    <!-- Contact Us Layout -->
    <LinearLayout
        android:id="@+id/LayoutContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/footerEmail"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/footerLocation"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutContacts2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/footerNumber"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/Copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/footerCopyRight"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="10dp" />
    </LinearLayout>


</LinearLayout>